# ithitools

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  dianalvs.sln  dianavs.sln  ithi  ithitoolsvs.sln  makefile
.github/workflows/: ci-tables.yml  ci-tests-clang.yml  ci-tests-macos.yml  ci-tests-privacy.yml  ci-tests-scan-build.yml  ci-tests.yml
Release/: ithitest.iobj  ithitest.ipdb  ithitoolsvs.iobj  ithitoolsvs.ipdb  ithiunit.exp  ithiunit.iobj  ithiunit.ipdb
clitest/: clitest.vcxproj  clitest.vcxproj.filters
copr/: ithitools.spec
data/: 2017-01-31_registrars.csv  2017-01-31_tlds.csv  2017-feb-tlds.csv  IndexData-test-ref.txt  M1-2017-01-31-compliance.csv  M1-2017-01-31.csv  M1-2017-02-28.csv  M10-2017-01-31.csv  M10-2017-02-28.csv  M10Data-test-ref.txt  M11-2017-01-31.csv  M11-2017-02-28.csv  M11Data-test-ref.txt  M1Data-test-ref.txt  M2-2017-01-31.csv  M2-2017-02-28.csv  M2Data-test-ref.txt  M3-2017-01-31.csv  M3-2017-02-28.csv  M3Data-test-ref.txt  M4-2017-01-31.csv  M4-2017-02-28.csv  M4Data-test-ref.txt  M5-2017-01-31.csv  M5-2017-02-28.csv  M5Data-test-ref.txt  M6-2017-01-31.csv  M6-2017-02-28.csv  M6Data-test-ref.txt  M7-2016-12-31.csv  M7-2017-01-31.csv  M7-2017-02-28.csv  M7Data-test-ref.txt  M7data-test-ref.txt  M8-2017-01-31.csv  M8-2017-02-28.csv  M8Data-test-ref.txt  M9-2017-01-31.csv  M9-2017-02-28.csv  M9Data-test-ref.txt  (+68 more)
debian/: README.Debian  README.source  changelog  control  copyright  init.d.ex  ithitools.cron.d.ex  ithitools.default.ex  ithitools.doc-base.EX  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
dianalvs/: dianalvs.vcxproj  dianalvs.vcxproj.filters
dianavs/: dianavs.vcxproj  dianavs.vcxproj.filters
imrs/: imrs.py  imrs_anycast.py  imrs_apnic.py  imrs_apnic_list.py  imrs_classifier.py  imrs_classifier2.py  imrs_classifier3.py  imrs_explore.py  imrs_explore_ratios.py  imrs_frequency.py  imrs_head.py  imrs_pandas.py  imrs_ratios.py  imrs_sampler.py  imrs_server_groups.py  imrs_test.py
include/: ithicap.h
ithitestlib/: ithitestlib.vcxproj  ithitestlib.vcxproj.filters
ithitoolslib/: ithitoolslib.vcxproj  ithitoolslib.vcxproj.filters  stdafx.cpp
ithitoolsvs/: ithitoolsvs.vcxproj  ithitoolsvs.vcxproj.filters
ithiunit/: ithiunit.vcxproj  ithiunit.vcxproj.filters  stdafx.cpp  unittest1.cpp
lib/: AddressFilter.cpp  AddressFilter.h  CaptureSummary.cpp  CaptureSummary.h  ComputeM34.cpp  ComputeM34.h  ComputeM6.cpp  ComputeM6.h  ComputeMetric.cpp  ComputeMetric.h  CsvHelper.cpp  CsvHelper.h  DnsPrefixList.inc  DnsStatHash.cpp  DnsStatHash.h  DnsStats.cpp  DnsStats.h  DnsTypes.h  DnscapPlugIn.cpp  HashBinGeneric.h  HashWriteOnceGeneric.h  M1Data.cpp  M1Data.h  M2Data.cpp  M2Data.h  M7Getter.cpp  M7Getter.h  NamePattern.cpp  NamePattern.h  OdiPublisher.cpp  OdiPublisher.h  PcapCsvMerge.cpp  PcapCsvMerge.h  PcapCsvReader.cpp  PcapCsvReader.h  QNameMinimization.cpp  QNameMinimization.h  TldAsKey.h  UsefulTransaction.cpp  UsefulTransaction.h  (+23 more)
lib/wincompat/: dirent.h
resolver/: country.py  ip2as.py  open_rsv.py  open_rsv_test.py  open_servers.py  open_servers_test.py  rsv_as_study.py  rsv_both_graphs.py  rsv_log_parse.py  rsv_log_test.py  top_as.py
src/: add-date-version-to-metric.py  add_partner_m4.sh  clean4ubuntu.sh  convertlist.py  copy-resolvers.sh  core-mapping.sh  diana.cpp  dianal.cpp  dobackup.sh  eai-cron.sh  imrs_cluster.py  imrs_instances.py  imrs_monthly.py  imrs_monthly_ip.py  imrs_total.py  imrsrsv.py  ipstats.sh  ithi-m4-partner.sh  ithi-m8-partner.sh  ithicatchup.sh  ithicron.sh  ithitest.cpp  ithitools.cpp  m5ingest.py  metricFormat.py  odpcron.sh  oneMonthM1.sh  oneMonthM3.sh  oneMonthM4.sh  oneMonthM4Partner.sh  oneMonthM5.sh  oneMonthM8.sh  oneMonthM8Partner.sh  partnercheck.py  processM1upload.pl  processM2upload.pl  stdafx.cpp  tlsaInput.py  upload.pl
stages/: stage-test.sh  stage1-deep.sh  stage1.sh  stage2.sh  stage2b.sh  stage3.sh  stage3b.sh  stage4.sh
stats/: KafkaDataAnd Parallelism.txt  KafkaWindowsDepoyment.txt  SumM3Analysis.py  SumM3Avg.py  SumM3Lib.py  SumM3LibTest.py  SumM3Producer.py  SumM3Replay.py  SumM3Thresholder.py  SumM3Util.py  SumM3lib.py  address_file.py  anomdns.py  anomdnsTest.py  captures.py  categorize_ip.py  category_by_ip.py  cc_map.py  citylist.py  citysearch.py  compute_m39.py  compute_m9x.py  count_ip.py  count_name_parts.py  explain-ip.py  explain-num-tld.py  explain.py  explore-dga.py  frequent_ip.py  get_non_tiny.py  ip2as.py  ip2asbuilder.py  ip2asfrombgp.py  ip_summary.py  ithifile.py  load_asnames.py  load_l_root_data.py  load_l_root_folders.py  location_country.py  m3dga.py  (+25 more)
test/: CaptureTest.cpp  CaptureTest.h  CborTest.cpp  CborTest.h  CdnsCaptureTest.cpp  CdnsCaptureTest.h  CdnsTest.cpp  CdnsTest.h  CsvTest.cpp  CsvTest.h  DnsPrefixTest.cpp  DnsPrefixTest.h  GetNameTest.cpp  GetNameTest.h  HyperLogLogTest.cpp  HyperLogLogTest.h  IPStatsTest.cpp  IPStatsTest.h  LoadTest.cpp  LoadTest.h  M1DataTest.cpp  M1DataTest.h  M2DataTest.cpp  M2DataTest.h  MergeTest.cpp  MergeTest.h  MetricTest.cpp  MetricTest.h  OdiPublishTest.cpp  OdiPublishTest.h  PatternTest.cpp  PatternTest.h  PluginTest.cpp  PluginTest.h  PublishTest.cpp  PublishTest.h  QNameTest.cpp  QNameTest.h  SaveTest.cpp  SaveTest.h  (+12 more)
testfiles/: domains.txt  generation-test-10000.pcap  smalltest.pcap
tmp/: m5-test.csv
travis/: Doxyfile  check-dnsstats-tables.py  ithipages-publish-key.enc
www/: .htaccess  .htpasswd  IndexData.txt  M10Data.txt  M11Data.txt  M1Data.txt  M2Data.txt  M3Data.txt  M46CollectionSample.csv  M4Data.txt  M5Data.txt  M6Data.txt  M7Data.txt  M8Data.txt  M9Data.txt  about-eai.html  about-m1.html  about-m10.html  about-m11.html  about-m2.html  about-m3.html  about-m4.html  about-m5.html  about-m6.html  about-m7.html  about-m8.html  about-m9.html  about.html  decisions-2017-01-10.txt  decisions-2017-01-18.txt  graph-eai.html  graph-m1.html  graph-m10.html  graph-m11.html  graph-m2.html  graph-m3.html  graph-m4.html  graph-m5.html  graph-m6.html  graph-m7.html  (+11 more)
www/check/: partnersCheck.html
(+60 files in other folders)
